Added locking campaigns when you aren't a member in them

--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -1,8 +1,18 @@
 <div *ngIf="campaignData; else loading" class="container" id="container-overview">
     <div class="row mx-0">
-        <a class="col-sm px-0 campaign" *ngFor="let campaign of campaignData" routerLink="{{routingService.getRoutePath('home1', {campaign: campaign.name})}}">
-            <div class="campaign-overlay text-center">
+        <a 
+        class="col-sm px-0 campaign" 
+        *ngFor="let campaign of campaignData" 
+        routerLink="{{routingService.getRoutePath('home1', {campaign: campaign.name})}}"
+        [ngClass]="{'events-disabled': !campaign.isMember}"
+        >
+            <div class="campaign-overlay overlay-heading text-center">
                 <h3> {{campaign.name}}</h3>
+            </div>
+
+            <div 
+            *ngIf="!campaign.isMember"
+            class="campaign-overlay overlay-lock fas fa-lock fa-5x">
             </div>
 
             <div class="background-image-background">
