--- a/src/app/components/articles/campaign-overview/campaign-overview.component.scss
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.scss
@@ -14,9 +14,19 @@
 .campaign-overlay{
     position: absolute;
     background-color: var(--wiki-background-1);
+    z-index: 1;
+}
+
+.campaign-overlay.overlay-heading{
     width: 100%;
     height: 4rem;
-    z-index: 1;
+}
+
+.campaign-overlay.overlay-lock{
+    top: 35%;
+    height: 5rem;
+    width: 5rem;
+    background-color: unset;
 }
 
 .campaign:hover .campaign-overlay h3{
