Fixed sidebar link to campaign admin using correct field for campaign name

--- a/src/app/components/utility/sidebar/sidebar.component.html
+++ b/src/app/components/utility/sidebar/sidebar.component.html
@@ -46,7 +46,7 @@
                 </li>
 
                 <li *ngIf="showAdminSection">
-                    <a class="on-hover-show" routerLink="{{ routingService.getRoutePath('campaign-admin', {campaign: campaign}) }}" >
+                    <a class="on-hover-show" routerLink="{{ routingService.getRoutePath('campaign-admin', {campaign: currentCampaignName}) }}" >
                         <i class="fas fa-dragon"></i>
                         <span> Campaign Admin </span>
                     </a>
