--- a/src/app/components/utility/campaign/campaign.component.scss
+++ b/src/app/components/utility/campaign/campaign.component.scss
@@ -1,3 +1,9 @@
 .btn-secondary{
     background-color: #1b1f22;
 }
+
+.gallery-image{
+    max-height: 20rem;
+    max-width: 100%;
+    object-fit: contain;
+}
