Fixed spells back-link being broken

--- a/src/app/components/articles/spells/spells.component.html
+++ b/src/app/components/articles/spells/spells.component.html
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <div class="btn btn-secondary" routerLink="{{routingService.getRoutePath('home1', {campaign: campaign})}}">
+        <div class="btn btn-secondary" routerLink="{{routingService.getRoutePath('home1', {campaign: campaign_details.name})}}">
             Back To Frontpage
         </div>
     </article>
