--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ input[type="submit"], button {
 }
 
 .aldrune-icon{
-	background: url('https://www.aldrune.com/static/aldrune_icon/favicon-32x32.png');
+	background-size: contain;
 	width: 32px;
 	height: 32px;
 	display:block;
