Moved config tables to campaign overview page as well
Also some redesign to the sidebar

--- a/src/app/components/articles/campaign-overview/campaign-overview.component.scss
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.scss
@@ -61,4 +61,8 @@
     .background-image{
         height: 33vh;
     }
+
+    #campaign-overview-heading{
+        flex-direction: column;
+    }
 }
