--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -1,10 +1,17 @@
 <div class="container bg-color-black" id="container-overview" #campaignOverviewContainer>
     <div class="row mx-0" id="campaign-overview-heading" *ngIf="isGlobalAdmin()">
         <h3 class="flex-1 text-center">Choose your campaign</h3>
-        <a routerLink="{{routingService.getRoutePath('admin')}}" class="float-right alert alert-info mb-0">
-            <span class="fas fa-user-cog"></span>
-            General administration
-        </a>
+        <div>
+            <a routerLink="{{routingService.getRoutePath('admin')}}" class="float-right alert alert-info mb-0 p-2 mx-2">
+                <span class="fas fa-user-cog"></span>
+                General administration
+            </a>
+    
+            <a routerLink="{{ routingService.getRoutePath('config-tables') }}" class="float-right alert alert-info mb-0 p-2 mx-2">
+                <i class="fa fa-table"></i>
+                <span> Config Tables </span>
+            </a>
+        </div>
     </div>
     <div class="row mx-0">
         <a 
