Added better separation of campaigns on mobile

--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -13,7 +13,7 @@
             </a>
         </div>
     </div>
-    <div class="row mx-0">
+    <div class="row mx-0" id="campaign-row">
         <a 
         class="col-sm px-0 campaign" 
         *ngFor="let campaign of campaignData" 
