--- a/src/app/components/utility/sidebar/sidebar.component.scss
+++ b/src/app/components/utility/sidebar/sidebar.component.scss
@@ -137,7 +137,7 @@ li a i{ //entry icon
     margin-left: 0.5rem !important;
 }
 
-#brand .aldrune-icon{
+#brand .campaign-icon{
     height: 32px;
     width: 32px;
 }
