--- a/src/app/components/utility/sidebar/sidebar.component.html
+++ b/src/app/components/utility/sidebar/sidebar.component.html
@@ -37,7 +37,7 @@
             <ul id="user-links" class="on-hover-show" >
                 <!-- Profile -->
                 <li>
-                    <a class="on-hover-show" routerLink="{{ routingService.getRoutePath('profile', {campaign: currentCampaign.name, username: tokenService.getCurrentUserName()})}}">
+                    <a class="on-hover-show" routerLink="{{ routingService.getRoutePath('profile', {campaign: currentCampaign?.name, username: tokenService.getCurrentUserName()})}}">
                         <i class="fa fa-user"></i>
                         <span> Profile </span>
                     </a>
@@ -45,7 +45,7 @@
 
                 <!-- Admin Section -->
                 <li *ngIf="showAdminSection">
-                    <a class="on-hover-show" routerLink="{{ routingService.getRoutePath('campaign-admin', {campaign: currentCampaign.name}) }}" >
+                    <a class="on-hover-show" routerLink="{{ routingService.getRoutePath('campaign-admin', {campaign: currentCampaign?.name}) }}" >
                         <i class="fas fa-dragon"></i>
                         <span> Campaign Admin </span>
                     </a>
