Fixed brand not hightlighting when hovering over

--- a/src/app/components/utility/sidebar/sidebar.component.html
+++ b/src/app/components/utility/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
             </a> 
         </li>
 
-        <li class="flex-1" title="{{currentCampaign.name}}-Home">
+        <li class="flex-1 brand-entry" title="{{currentCampaign.name}}-Home">
             <a class="pl-0" routerLink="{{ routingService.getRoutePath('home2', {campaign: currentCampaign.name}) }}">
                 <h3 class="d-flex align-items-center justify-content-center" id="brand"> 
                     <img class="campaign-icon"
