--- a/src/app/components/articles/creature-article/creature-article.component.html
+++ b/src/app/components/articles/creature-article/creature-article.component.html
@@ -34,7 +34,7 @@
         <!-- Footer (Move to other Article + Delete Article) -->
         <app-article-footer
         (delete)="deleteArticle()"
-        [link]="routingService.getRoutePath('creature-overview', {campaign: campaign})"
+        [link]="routingService.getRoutePath('creature-overview', {campaign: campaign.name})"
         [label]="'Back to Creatures'"
         [deleteMessage]="'Delete '+articleData.name+'?'"
         ></app-article-footer>
